--- a/themes/ace-documentation/layouts/partials/head.html
+++ b/themes/ace-documentation/layouts/partials/head.html
@@ -22,7 +22,7 @@
 
     <!-- Only include the tracking when using `hugo` or adding `--environment production` -->
     {{ if eq hugo.Environment "production" }}
-        {{ template "_internal/twitter_cards.html" . }}
+        {{- partial "twitter_cards.html" . -}}
     {{ end }}
 
 </head>
