--- a/themes/ace-documentation/layouts/shortcodes/childpages.html
+++ b/themes/ace-documentation/layouts/shortcodes/childpages.html
@@ -27,8 +27,8 @@
 
 {{ define "childs" }}
 		{{- range .menu }}
-			<li class="h6 child-links py-1">
-				<a href="{{.RelPermalink}}"> {{ .Title }} </a>
-			</li>
+		<li class="h6 child-links py-1">
+			<a href="{{.RelPermalink}}"> {{- partial "transcript_title.html" . -}} </a>
+		</li>
 		{{ end }}
 {{ end }}
